[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatial-tk"
version = "0.1.0"
description = "A comprehensive toolkit for analyzing Xenium spatial transcriptomics data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Hope Lab", email = "hope@lab.edu"}
]
keywords = ["spatial transcriptomics", "xenium", "single-cell", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Spatial data handling
    "spatialdata",
    "spatialdata_io",
    "squidpy",
    
    # Core single-cell analysis
    "scanpy",
    "anndata",
    
    # Data manipulation
    "pandas",
    "numpy",
    
    # Cell type annotation with enrichment analysis
    "decoupler",
    
    # Visualization
    "matplotlib",
    "seaborn",
    
    # Scientific computing
    "scipy",
    "scikit-learn",
    
    # Graph algorithms for clustering
    "igraph",
    "leidenalg",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
spatial-tk = "spatial_tk.cli:main"

[project.urls]
Homepage = "https://github.com/DamLabResources/spatial-tk"
Repository = "https://github.com/DamLabResources/spatial-tk"
Documentation = "https://github.com/DamLabResources/spatial-tk/blob/main/README.md"

[tool.setuptools]
packages = ["spatial_tk", "spatial_tk.commands", "spatial_tk.core", "spatial_tk.utils"]

[tool.setuptools.package-data]
spatial_tk = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
# Use custom temp directory to avoid filling up /tmp
# This directory should be on a partition with more space
tmp_path_retention_count = 0
tmp_path_retention_policy = "none"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

